--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     header 
 {
       background-color: #333333;
-      color: yellow;
-      padding: 20px;
+      color: white;
+      padding: 100px;
     }
     nav a {
       margin: 0 15px;
@@ -28,16 +28,17 @@
 <body>
 
   <header>
-    <h1 style="font-size:200px;colour:yellow;">
+    <h1 style="font-size:150px;colour:white;">
 Resturant menu</h1>
       </header>
 
  <div class="image-container">
-<img src="WhatsApp Image 2025-05-25 at 13.45.01_11e7d871.jpg">
-<img src="WhatsApp Image 2025-05-25 at 13.45.01_1718c81f.jpg">
-<img src="WhatsApp Image 2025-05-24 at 16.13.01_287d23fb.jpg">
-<img src="WhatsApp Image 2025-05-24 at 16.13.07_e461883a.jpg">
-<img src="WhatsApp Image 2025-05-25 at 13.45.02_5e9a4c7b.jpg">
+<img src="WhatsApp Image 2025-05-25 at 15.36.13_10abc096.jpg" width="840px">
+<img src="WhatsApp Image 2025-05-25 at 13.45.01_1718c81f.jpg" width="850px">
+<img src="WhatsApp Image 2025-05-24 at 16.13.01_287d23fb.jpg" width="850px">
+<img src="WhatsApp Image 2025-05-25 at 15.36.30_5716de86.jpg" width="850px">
+<img src="WhatsApp Image 2025-05-25 at 13.45.02_5e9a4c7b.jpg" width="850px">
 </div>
+<a href="https://www.justdial.com/Harihar/Honey-Family-Garden-Restaurant-Anagawadi-Cross-Near-Bypass-Harihar/9999P8192-8192-211206185349-C6D7_BZDET"> <h1 style="font-size:100px;colour:yellow;"> click link to review the resturant<h1></a>
 </body>
 </html>
