--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     }
     header 
 {
-      background-color: #333333;
-      color: white;
+      background-color: #255,255;
+      color:bright yellow;
       padding: 100px;
     }
     nav a {
       margin: 0 15px;
-      color: white;
+      color:255;
       text-decoration: none;
     }
     section {
@@ -28,7 +28,7 @@
 <body>
 
   <header>
-    <h1 style="font-size:150px;colour:white;">
+    <h1 style="font-size:120px;colour:yellow;">
 Resturant menu</h1>
       </header>
 
